--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,99 +1,126 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruxintel - Dashboard</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Ruxintel - Dashboard</title>
 
-    <link rel="icon" href="static/img/icon.png" type="image/x-icon">
+        <link rel="icon" href="static/img/icon.png" type="image/x-icon" />
 
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+        <!-- fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+            rel="stylesheet"
+        />
 
-    <!-- css -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="static/css/colors.css">
-    <link rel="stylesheet" href="static/css/main.css">
-    <link rel="stylesheet" href="static/css/components/scrollbar.css">
-    <link rel="stylesheet" href="static/css/components/cards.css">
-    <link rel="stylesheet" href="static/css/components/navbar.css">
-    <link rel="stylesheet" href="static/css/components/button.css">
-    <link rel="stylesheet" href="static/css/components/noMessages.css">
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css" rel="stylesheet">
-</head>
-<body>
-    <style>
-        div:where(.swal2-container) div:where(.swal2-popup) {
-            border-radius: 15px;
-            background: var(--main-black);
-            color: var(--main-white);
-            border: 2px solid var(--main-green);
-        }
-        
-        div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm) {
-            background-color: transparent;
-            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
-            color: var(--main-black);
-            font-weight: 600;
-            transition: 0.4s;
-        }
+        <!-- css -->
+        <link
+            href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="static/css/colors.css" />
+        <link rel="stylesheet" href="static/css/main.css" />
+        <link rel="stylesheet" href="static/css/components/scrollbar.css" />
+        <link rel="stylesheet" href="static/css/components/cards.css" />
+        <link rel="stylesheet" href="static/css/components/navbar.css" />
+        <link rel="stylesheet" href="static/css/components/button.css" />
+        <link rel="stylesheet" href="static/css/components/noMessages.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <style>
+            div:where(.swal2-container) div:where(.swal2-popup) {
+                border-radius: 15px;
+                background: var(--main-black);
+                color: var(--main-white);
+                border: 2px solid var(--main-green);
+            }
 
-        div:where(.swal2-container) div:where(.swal2-actions):not(.swal2-loading) .swal2-styled:hover {
-            background-image: none;
-            background: linear-gradient(to right, var(--main-green), var(--main-cyan));
-            scale: 1.15;
-            transition: 0.4s;
-        }
+            div:where(.swal2-container)
+                button:where(.swal2-styled):where(.swal2-confirm) {
+                background-color: transparent;
+                background: linear-gradient(
+                    to right,
+                    var(--main-green),
+                    var(--main-cyan)
+                );
+                color: var(--main-black);
+                font-weight: 600;
+                transition: 0.4s;
+            }
 
-        body.swal2-height-auto {
-            height: -webkit-fill-available !important;
-        }
-    </style>
-    <nav class="navbar">
-        <ul>
-            <!-- <li>
-                <i class='bx bx-user'></i>
-                <span>perfil</span>
-            </li>
-            <li>
-                <i class='bx bx-help-circle' ></i>
-                <span>ajuda</span>
-            </li> -->
-            <a href="https://chromewebstore.google.com/detail/zap-defender/fdplagmcgeboaohjimmneiecgkjhjlcl" target="_blank">
-                <li>
-                    <i class='bx bx-extension'></i>
-                    <span>extensão</span>
-                </li>
-            </a>
-            <a href="index.html">
+            div:where(.swal2-container)
+                div:where(.swal2-actions):not(.swal2-loading)
+                .swal2-styled:hover {
+                background-image: none;
+                background: linear-gradient(
+                    to right,
+                    var(--main-green),
+                    var(--main-cyan)
+                );
+                scale: 1.15;
+                transition: 0.4s;
+            }
+
+            body.swal2-height-auto {
+                height: -webkit-fill-available !important;
+            }
+        </style>
+        <nav class="navbar">
+            <ul>
+                <a
+                    href="https://chromewebstore.google.com/detail/zap-defender/fdplagmcgeboaohjimmneiecgkjhjlcl"
+                    target="_blank"
+                >
+                    <li>
+                        <i class="bx bx-extension"></i>
+                        <span>extensão</span>
+                    </li>
+                </a>
+
                 <li id="home">
-                    <i class='bx bx-home' ></i>
+                    <i class="bx bx-home"></i>
                 </li>
-            </a>
-            <a href="#">
-                <li>
-                    <i class='bx bx-door-open'></i>
+
+                <li id="sair" onclick="sair()">
+                    <i class="bx bx-door-open"></i>
                     <span>sair</span>
                 </li>
-            </a>
-        </ul>
-    </nav>
-    <main>
-        <h1 id="logo">ruxintel</h1> <!-- <h1 id="logo">Olá, nome!</h1> -->
-        <div class="container">
-            <h1>Detecção em tempo real</h1>
-            <div class="cards">
-                
+            </ul>
+        </nav>
+        <main>
+            <h1 id="logo">ruxintel</h1>
+            <!-- <h1 id="logo">Olá, nome!</h1> -->
+            <div class="container">
+                <div style="display: flex; justify-content: space-between">
+                    <h1>Detecção em tempo real</h1>
+
+                    <div
+                        style="display: none; gap: 20px; align-items: center"
+                        id="desconectado"
+                    >
+                        <p style="color: #fff">Você está desconectado!</p>
+                        <button
+                            type="button"
+                            class="button-default"
+                            onclick="location.href = 'connect.html';"
+                        >
+                            Conectar novamente
+                        </button>
+                    </div>
+                </div>
+                <div class="cards"></div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <script src="static/js/validateSession.js"></script>
-    <script src="static/js/exitButton.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
-    <script src="static/js/main.js"></script>
-</body>
-
+        <script src="static/js/validateSession.js"></script>
+        <script src="static/js/exitButton.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
+        <script src="static/js/main.js"></script>
+    </body>
 </html>
